# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
page_loader/: __init__.py  dowloader.py  logger.py  parser.py  url.py
page_loader/scripts/: __init__.py  load.py
tests/: test_loading_page.py
tests/fixtures/: index.html  processed.html  ru-hexlet-io-courses.html
tests/fixtures/static/: style.css  test.js
