[tool.poetry]
name = "hexlet-code"
version = "0.1.8"
description = ""
authors = ["snovozhilov <sergey.novozhilov@upm.ai>"]

packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"
requests-mock = "^1.9.2"
pytest-mock = "^3.6.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.load:main"